.platform/covasim-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: covasim
  name: covasim
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    service: covasim
status:
  loadBalancer: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: covasim
  name: covasim
spec:
  replicas: 2
  selector:
    matchLabels:
      service: covasim
  strategy: {}
  template:
    metadata:
      labels:
        service: covasim
    spec:
      containers:
      - image: "registry.hub.docker.com/jules2689/covasim:latest"
        name: covasim
        ports:
        - containerPort: 80
        readinessProbe:
          exec:
            command:
            - curl
            - --max-time
            - "10"
            - http://127.0.0.1:8097/healthcheck
          initialDelaySeconds: 30
          periodSeconds: 5
          failureThreshold: 30
        livenessProbe:
          exec:
            command:
            - curl
            - --max-time
            - "10"
            - http://127.0.0.1:8097/healthcheck
          initialDelaySeconds: 240
          periodSeconds: 5
status: {}
