.platform/ingress-local.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: covasim-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /
          backend:
            serviceName: covasim
            servicePort: 8000
