.platform/ingresss-azure.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: covasim
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: covasim
          servicePort: 80
